--- a/slides/src/docs/asciidoc/index.adoc
+++ b/slides/src/docs/asciidoc/index.adoc
@@ -1,4 +1,3 @@
-[data-background="images/summit-intro.png"]
 = Juggling multiple Java platforms and Jigsaw with Gradle
 Cédric Champeau (@CedricChampeau), Gradle Inc.
 2016-04-22
@@ -13,6 +12,7 @@ ifndef::sourcedir[:sourcedir: ../java]
 :adoctor: http://asciidoctor.org/[Asciidoctor]
 :gradle: http://gradle.org[Gradle]
 
+[data-background="images/nantes.jpg"]
 == Who am I
 
 ++++
@@ -21,7 +21,12 @@ ifndef::sourcedir[:sourcedir: ../java]
   font-size: 16px;
 }
 </style>
+
+<div class="pictureWrapper">
+   <div class="picture"><img src="images/mini-me.png"></div>
+</div>
 ++++
+
 
 [source,groovy]
 ----
@@ -42,6 +47,7 @@ Misc OSS contribs (Gradle plugins, deck2pdf, jlangdetect, ...)'''
 }
 ----
 
+[data-background="images/puzzle.jpg"]
 == Project Jigsaw
 
 * Modularity for the Java platform
@@ -148,9 +154,10 @@ screencast:step7[]
 
 * Specs can be found on https://github.com/gradle/gradle/blob/master/design-docs/jdk9-support.md[our GitHub repo]
 
+[%notitle]
+[data-background="images/questions.jpg"]
 == Questions
 
-image::qa.png[]
 
 == Gradle Inc
 
